导员查看历史表格附件bug修复